# Any2Screen

./: .dockerignore  .gitignore  AGENTS.md  DEVELOPMENT_PLAN.md  Dockerfile  README.md  pyproject.toml
Any2Screen-server/: docker-compose.local.yml  docker-compose.yml  nginx.conf  rsync-excludes.txt
demo-site/: app.js  index.html  styles.css
deploy/: docker-compose.local.yml  docker-compose.yml  nginx.conf  rsync-excludes.txt
docs/: d19-feishu-wechat-export-plan.md  demo-site-docker-deploy.md  development-log.md  intermediate-document.md  md2html.md  md2html.requirements.txt  pipeline.md  prompts.md  web-mvp-wechat-image-export-plan.md
logs/: 2026-06-05-development-log.md
md2html/: md2html.py
prompts/: development-log.md
samples/: DEVELOPMENT_PLAN.html  README.html  README.md
samples/perf-baseline/inputs/: article.md  brief.docx  notes.txt
scripts/: any2screen.py  collect_performance_baseline.py
src/: any2html_cli.py  cli.py  command_registry.py  convert_cli.py  doc2md.py  html2screen_cli.py  perf_baseline.py  pipeline.py  preview.py  preview_cli.py  web_cli.py
src/a2s/: any2html_cli.py  cli.py  command_registry.py  convert_cli.py  doc2md.py  html2screen_cli.py  md2html.py  md2img.py  pipeline.py
src/a2s/any2html/: __init__.py
src/a2s/html2screen/: __init__.py
src/any2html/: __init__.py  markdown.py
src/html2screen/: __init__.py  renderers.py
src/web/: app.py  document_preview.py  export.py  files.py  routes.py  schemas.py
src/web/static/: app.js  index.html  styles.css
tests/: test_any2html_markdown.py  test_cli_helpers.py  test_perf_baseline.py  test_preview.py  test_web_api.py
