[project]
name = "any2screen"
version = "0.1.0"
description = "Document conversion toolkit for mobile-friendly HTML, PDF, Markdown, and long-image outputs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.0",
    "linkify-it-py>=2.0.0",
    "weasyprint>=62.0",
    "playwright>=1.40.0",
    "python-docx>=1.1.0",
    "PyPDF2>=3.0.0",
    "msoffcrypto-tool>=5.4.0",
    "cairosvg>=2.9.0",
]

[project.optional-dependencies]
watch = [
    "watchdog>=4.0.0",
]

[project.scripts]
any2screen = "a2s.cli:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
